added 4a, 4b
